2001-10-27  Nat Friedman  <nat@ximian.com>

	* Makefile.am (SUBDIRS): Reverse the order here.

	* messenger/: Import of this directory.
	* Makefile.am (SUBDIRS): Added messenger/ to the subdirs.

	* Messenger.idl (Messenger): contactInfo is an async response.

	* pms/Makefile.am (libtocbackend_a_SOURCES): Changed the
	LOG_DOMAIN to evolution-messenger.

2001-10-27  Joe Shaw  <joe@ximian.com>

	* Messenger.idl: Move the "Status" enum out of the Backend
	interface and into the toplevel Messenger module.  Change the name
	to UserStatus and prefix all of the enumerators with "UserStatus_"
	because CORBA C bindings suck.  Change the Listener:SignonError
	enum accordingly because, again, CORBA C bindings suck.
	(contactUpdate): Take a UserStatus argument.
	(getSignons): delete.

2001-10-27  Joe Shaw  <joe@ximian.com>

	* Initial import