@@ -1,3 +1,13 @@
+2001-10-28  Joe Shaw  <joe@ximian.com>
+
+	* pms/e-messenger-backend-dispatcher.c
+	(impl_MessengerBackendDispatcher_signon): Make it the
+	responsibility of the dispatcher to dup and set the listener, not
+	each backend.
+
+	* pms/aol-toc-backend.c (aol_toc_backend): Change to reflect the
+	above change.
+
 2001-10-27  Nat Friedman  <nat@ximian.com>
 
 	* Makefile.am (SUBDIRS): Reverse the order here.
